[package]
name = "rcli-loader"
version = "0.1.0"
edition = "2021"
crate-type = "lib"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.22"
terminal_size = "0.4.2"
tokio = { version = "1.46.1", features = ["full"], optional = true }



[[example]]
name = "basic_example"
required-features = ["tokio"]
